--- a/src/components/Question.css
+++ b/src/components/Question.css
@@ -2,7 +2,7 @@
   background-color: #8435de;
   border-radius: 1rem;
   padding: 2rem;
-  width: 500px;
+  width: 340px;
 }
 
 #question p {
@@ -16,4 +16,31 @@
 #question button {
   border: 2px solid #fff;
   margin: 1rem;
+}
+
+
+@media (min-width: 768px) {
+
+  #question {
+    background-color: #8435de;
+    border-radius: 1rem;
+    padding: 2rem;
+    width: 768px;
+  }
+  
+  #question p {
+    margin-bottom: 1rem;
+  }
+  
+  #question h2 {
+    margin-bottom: 2rem;
+  }
+  
+  #question button {
+    border: 2px solid #fff;
+    margin: 1rem;
+  }
+  
+
+  
 }
